# marlows-parconc-exercises

./: README.md
parconc-ch07/: parconc-ch07.cabal
parconc-ch07/app/: Main.hs
parconc-ch07/src/: Chan.hs  Fork.hs  Logger.hs  Phonebook.hs  Reminder.hs
parconc-ch07/test/: ChanSpec.hs  LoggerSpec.hs  PhonebookSpec.hs  Spec.hs
parconc-ch08/: parconc-ch08.cabal
parconc-ch08/app/: Main.hs
parconc-ch08/src/: Async.hs  Async2.hs  MyExceptions.hs
parconc-ch08/test/: Async2Spec.hs  AsyncSpec.hs  MyExceptionsSpec.hs
parconc-ch09/: parconc-ch09.cabal
parconc-ch09/src/: Async3.hs  AsyncCatching.hs  Swap.hs  Timeout.hs
parconc-ch09/test/: Async3Spec.hs  SwapSpec.hs  TimeoutSpec.hs
parconc-ch10/: parconc-ch10.cabal
parconc-ch10/src/: AsyncSTM.hs  Barrier.hs  FairMVar.hs  TChan.hs
parconc-ch10/test/: AsyncSTMSpec.hs  BarrierSpec.hs  FairMVarSpec.hs  TChanSpec.hs
parconc-ch11/: parconc-ch11.cabal
parconc-ch11/app/: Main.hs
parconc-ch11/src/: AsyncFunctor.hs  Exercises.hs  Timeout2.hs
parconc-ch11/test/: AsyncFunctorSpec.hs  ExercisesSpec.hs  Timeout2Spec.hs
parconc-ch12/: parconc-ch12.cabal  stack.yaml
parconc-ch12/app/: ChatClientApp.hs  ClientApp.hs  HordeApp.hs  Main.hs
parconc-ch12/src/: ChatClient.hs  Client.hs  Config.hs  Horde.hs  Message.hs  MyChatServer.hs  Server.hs  ServerChan.hs  ServerIO.hs  ServerSTM.hs  ServerSTMByMarlow.hs
parconc-ch12/test/: MyChatServerSpec.hs  ServerChanSpec.hs  ServerIOSpec.hs  ServerSTMByMarlowSpec.hs  ServerSTMSpec.hs  ServerSpec.hs
