name:                parconc-ch08
version:             0.1.0.0
synopsis:            Exercises for Chapter 7
description:         Please see README.md
homepage:            https://github.com/capitanbatata/parconc-ch08#readme
license:             GPL-3
license-file:        LICENSE
author:              Damian Nadales
maintainer:          damian.nadales@gmail.com
copyright:           2016 Damian Nadales
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Async
                     , Async2
                     , MyExceptions
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable parconc-ch08
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , parconc-ch08
  default-language:    Haskell2010

test-suite parconc-ch08-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , async >= 2.1.0
                     , parconc-ch08
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules: AsyncSpec
               , MyExceptionsSpec
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/capitanbatata/marlows-parconc-exercises
