name:                parconc-ch12
version:             0.1.0.0
synopsis:            Exercies for Chapter 12 of Parallel and Concurrent Programming in Haskell
description:         Please see README.md
homepage:            https://github.com/capitanbatata/parconc-ch12#readme
license:             BSD3
license-file:        LICENSE
author:              Damian Nadales
maintainer:          damian.nadales@gmail.com
copyright:           2016 Damian Nadales
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Server
                     , Client
                     , Config
                     , Horde
                     , Message
                     , ServerIO
                     , ServerChan
                     , ServerSTM
                     , ServerSTMByMarlow
                     , MyChatServer
                     , ChatClient
  build-depends:       base >= 4.7 && < 5
                     , network >= 2.6
                     , async >= 2.1
                     , containers >= 0.5
                     , stm
                     , bytestring >= 0.10.6
                     , attoparsec >= 0.13
                     , scientific >= 0.3.4
  default-language:    Haskell2010

executable horde-app
  hs-source-dirs:      app
  main-is:             HordeApp.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , parconc-ch12
  default-language:    Haskell2010
  
executable client-app
  hs-source-dirs:      app
  main-is:             ClientApp.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , parconc-ch12
  default-language:    Haskell2010
  
executable server-app
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , parconc-ch12
  default-language:    Haskell2010

test-suite parconc-ch12-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , parconc-ch12
                     , hspec
                     , QuickCheck
                     , async >= 2.1
                     , bytestring >= 0.10.6
                     , containers >= 0.5
                     , async >= 2.1
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/capitanbatata/parconc-ch12
